Trabajando con los iconos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 </head>
 <body>
-    <header class="header">
+    <!--Aplicamos una segunda clase para establecer reglas cuando AMBAS estén presentes-->
+    <header class="header inicio">
         <div class="contenedor contenido-header">
             <div class="barra">
                 <a href="/">
@@ -20,9 +21,9 @@
                     <a href="blog.html">Blog</a>
                     <a href="contacto.html">Contacto</a>
                 </nav>
-            </div> <!--.barra-->>
+            </div> <!--.barra-->
             <h1>
-                Venta de casas y departamentos exclusivos de lujo
+                Venta de casas y Departamentos exclusivos de lujo
             </h1>
         </div>
     </header>
