--- a/index.html
+++ b/index.html
@@ -29,8 +29,60 @@
     </header>
 
     <main class="contenedor">
-        <h1>Titulo Página</h1>
+        <h1>Más sobre Nosotros</h1>
+
+        <div class="iconos-nosotros">
+            <div class="icono">
+                <img src="build/img/icono1.svg" alt="Icono seguridad" loading="lazy">
+                <h3>Seguridad</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci beatae natus laborum unde assumenda modi quasi architecto voluptatem quidem nobis. Recusandae, perspiciatis. Aliquam pariatur cum explicabo doloremque, at quibusdam exercitationem.</p>
+            </div> <!--icono-->
+            <div class="icono">
+                <img src="build/img/icono2.svg" alt="Icono precio" loading="lazy">
+                <h3>Precio</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci beatae natus laborum unde assumenda modi quasi architecto voluptatem quidem nobis. Recusandae, perspiciatis. Aliquam pariatur cum explicabo doloremque, at quibusdam exercitationem.</p>
+            </div><!--icono-->
+            <div class="icono">
+                <img src="build/img/icono3.svg" alt="Icono tiempo" loading="lazy">
+                <h3>Tiempo</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci beatae natus laborum unde assumenda modi quasi architecto voluptatem quidem nobis. Recusandae, perspiciatis. Aliquam pariatur cum explicabo doloremque, at quibusdam exercitationem.</p>
+            </div><!--icono-->
+        </div>
     </main>
+
+    <section class="seccion contenedor">
+        <h2>Casas y Depas en venta</h2>
+
+        <div class="contenedor-anuncios">
+            <divm class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio1.webp" type="image/webp">
+                    <source srcset="build/img/anuncio1.webp" type="image/jpeg">
+                    <img src="build/img/anuncio1.jpg" alt="anuncio" loading="lazy">
+                </picture>
+                <!--Contenido del anuncio-->
+                <div class="contenido-anuncio">
+                    <h3>Casa de Lujo en el Lago</h3>
+                    <p>Casa en el lago con excelente vista, acabados de lujo en excelente precio</p>
+                    <p class="precio">$3,000,000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
+                            <p>4</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer class="footer seccion">
         <div class="contenedor contenedor-footer">
