Finalizando páginas internas

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <div class="texto-entrada">
                     <a href="entrada.html">
                         <h4>Terraza en el techo de tu casa</h4>
-                        <p>Escrito el: <span>20/06/2025</span> por: <span>Admin</span></p>
+                        <p class="informacion-meta">Escrito el: <span>20/06/2025</span> por: <span>Admin</span></p>
                         <p>
                             Consejos para contruir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero
                         </p>
@@ -196,7 +196,7 @@
                 <div class="texto-entrada">
                     <a href="entrada.html">
                         <h4>Guía para la decoración de tu hogar</h4>
-                        <p>Escrito el: <span>20/06/2025</span> por: <span>Admin</span></p>
+                        <p class="informacion-meta">Escrito el: <span>20/06/2025</span> por: <span>Admin</span></p>
                         <p>
                             Maximiza el espacio de tu hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio
                         </p>
@@ -215,7 +215,7 @@
                 <div class="texto-entrada">
                     <a href="entrada.html">
                         <h4>La importancia de la iluminación de espacios en el hogar</h4>
-                        <p>Escrito el: <span>20/06/2025</span> por: <span>Admin</span></p>
+                        <p class="informacion-meta">Escrito el: <span>20/06/2025</span> por: <span>Admin</span></p>
                         <p>
                             Un reccorrido a las distintas decoraciones para lograr que tu hogar adquiera una capa de personalización importante
                         </p>
