--- a/blog.html
+++ b/blog.html
@@ -25,8 +25,84 @@
         </div>
     </header>
 
-    <main class="contenedor">
-        <h1>Blog</h1>
+    <main class="contenedor seccion contenido-centrado">
+        <h1>Nuestro Blog</h1>
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <picture>
+                        <source srcset="build/img/blog1.webp" type="image/webp">
+                        <source srcset="build/img/blog1.jpg" type="image/jpeg">
+                        <img src="build/img/blog1.jpg" loading="lazy" alt="texto entrada blog">
+                    </picture>
+                </div>
+
+                <div class="texto-entrada">
+                    <a href="entrada.html">
+                        <h4>Terraza en el techo de tu casa</h4>
+                        <p>Escrito el: <span>20/06/2025</span> por: <span>Admin</span></p>
+                        <p>
+                            Consejos para contruir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero
+                        </p>
+                    </a>
+                </div>
+            </article>
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <picture>
+                        <source srcset="build/img/blog3.webp" type="image/webp">
+                        <source srcset="build/img/blog3.jpg" type="image/jpeg">
+                        <img src="build/img/blog3.jpg" loading="lazy" alt="texto entrada blog">
+                    </picture>
+                </div>
+
+                <div class="texto-entrada">
+                    <a href="entrada.html">
+                        <h4>Guía para la decoración de tu hogar</h4>
+                        <p>Escrito el: <span>20/06/2025</span> por: <span>Admin</span></p>
+                        <p>
+                            Maximiza el espacio de tu hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio
+                        </p>
+                    </a>
+                </div>
+            </article>
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <picture>
+                        <source srcset="build/img/blog4.webp" type="image/webp">
+                        <source srcset="build/img/blog4.jpg" type="image/jpeg">
+                        <img src="build/img/blog4.jpg" loading="lazy" alt="texto entrada blog">
+                    </picture>
+                </div>
+
+                <div class="texto-entrada">
+                    <a href="entrada.html">
+                        <h4>La importancia de la iluminación de espacios en el hogar</h4>
+                        <p>Escrito el: <span>20/06/2025</span> por: <span>Admin</span></p>
+                        <p>
+                            Un reccorrido a las distintas decoraciones para lograr que tu hogar adquiera una capa de personalización importante
+                        </p>
+                    </a>
+                </div>
+            </article>
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <picture>
+                        <source srcset="build/img/blog2.webp" type="image/webp">
+                        <source srcset="build/img/blog2.jpg" type="image/jpeg">
+                        <img src="build/img/blog2.jpg" loading="lazy" alt="texto entrada blog">
+                    </picture>
+                </div>
+
+                <div class="texto-entrada">
+                    <a href="entrada.html">
+                        <h4>Construye una alberca un tu hogar</h4>
+                        <p>Escrito el: <span>20/06/2025</span> por: <span>Admin</span></p>
+                        <p>
+                            Consejos para contruir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero
+                        </p>
+                    </a>
+                </div>
+            </article>
     </main>
 
     <footer class="footer seccion">
