--- a/anuncios.html
+++ b/anuncios.html
@@ -14,13 +14,22 @@
                 <a href="/">
                     <img src="build/img/logo.svg" alt="imagen del logo">
                 </a>
-                <nav class="navegacion">
-                    <a href="nosotros.html">Nosotros</a>
-                    <a href="anuncios.html">Anuncios</a>
-                    <a href="blog.html">Blog</a>
-                    <a href="contacto.html">Contacto</a>
-                </nav>
-            </div> <!--.barra-->>
+                <!--Menú hamburguesa-->
+                <div class="mobile-menu">
+                    <img src="build/img/barras.svg" alt="icono menu responsivo">
+                </div>
+
+                <!--Botón Dark mode-->
+                <div class="derecha">
+                    <img class="dark-mode-boton" src="build/img/dark-mode.svg" alt="boton dark mode">
+                    <nav class="navegacion">
+                        <a href="nosotros.html">Nosotros</a>
+                        <a href="anuncios.html">Anuncios</a>
+                        <a href="blog.html">Blog</a>
+                        <a href="contacto.html">Contacto</a>
+                    </nav>
+                </div>
+            </div> <!--.barra-->
 
         </div>
     </header>
@@ -42,15 +51,15 @@
                     <p class="precio">$3,000,000</p>
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
+                            <img class="icono" src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
+                            <img class="icono" src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
+                            <img class="icono" src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
                             <p>4</p>
                         </li>
                     </ul>
@@ -73,15 +82,15 @@
                     <p class="precio">$2,200,000</p>
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
+                            <img class="icono" src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
+                            <img class="icono" src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
+                            <img class="icono" src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
                             <p>4</p>
                         </li>
                     </ul>
@@ -104,15 +113,15 @@
                     <p class="precio">$3,000,000</p>
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
+                            <img class="icono" src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
+                            <img class="icono" src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
+                            <img class="icono" src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
                             <p>4</p>
                         </li>
                     </ul>
@@ -137,15 +146,15 @@
                     <p class="precio">$3,000,000</p>
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
+                            <img class="icono" src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
+                            <img class="icono" src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
+                            <img class="icono" src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
                             <p>4</p>
                         </li>
                     </ul>
@@ -168,15 +177,15 @@
                     <p class="precio">$2,200,000</p>
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
+                            <img class="icono" src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
+                            <img class="icono" src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
+                            <img class="icono" src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
                             <p>4</p>
                         </li>
                     </ul>
@@ -199,15 +208,15 @@
                     <p class="precio">$3,000,000</p>
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
+                            <img class="icono" src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
+                            <img class="icono" src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
+                            <img class="icono" src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
                             <p>4</p>
                         </li>
                     </ul>
