--- a/index.html
+++ b/index.html
@@ -15,13 +15,26 @@
                 <a href="/">
                     <img src="build/img/logo.svg" alt="imagen del logo">
                 </a>
-                <nav class="navegacion">
-                    <a href="nosotros.html">Nosotros</a>
-                    <a href="anuncios.html">Anuncios</a>
-                    <a href="blog.html">Blog</a>
-                    <a href="contacto.html">Contacto</a>
-                </nav>
+
+                <!--Menú hamburguesa-->
+                <div class="mobile-menu">
+                    <img src="build/img/barras.svg" alt="icono menu responsivo">
+                </div>
+
+                <!--Botón Dark mode-->
+                <div class="derecha">
+                    <img class="dark-mode-boton" src="build/img/dark-mode.svg" alt="boton dark mode">
+                    <nav class="navegacion">
+                        <a href="nosotros.html">Nosotros</a>
+                        <a href="anuncios.html">Anuncios</a>
+                        <a href="blog.html">Blog</a>
+                        <a href="contacto.html">Contacto</a>
+                    </nav>
+                </div>
+
             </div> <!--.barra-->
+
+
             <h1>
                 Venta de casas y Departamentos exclusivos de lujo
             </h1>
@@ -67,15 +80,15 @@
                     <p class="precio">$3,000,000</p>
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
+                            <img class="icono" src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
+                            <img class="icono" src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
+                            <img class="icono" src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
                             <p>4</p>
                         </li>
                     </ul>
@@ -98,15 +111,15 @@
                     <p class="precio">$2,200,000</p>
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
+                            <img class="icono" src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
+                            <img class="icono" src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
+                            <img class="icono" src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
                             <p>4</p>
                         </li>
                     </ul>
@@ -129,15 +142,15 @@
                     <p class="precio">$3,000,000</p>
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
+                            <img class="icono" src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
+                            <img class="icono" src="build/img/icono_estacionamiento.svg" alt="icono est" loading="lazy">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
+                            <img class="icono" src="build/img/icono_dormitorio.svg" alt="icono rr" loading="lazy">
                             <p>4</p>
                         </li>
                     </ul>
