--- a/nosotros.html
+++ b/nosotros.html
@@ -14,13 +14,23 @@
                 <a href="/">
                     <img src="build/img/logo.svg" alt="imagen del logo">
                 </a>
-                <nav class="navegacion">
-                    <a href="nosotros.html">Nosotros</a>
-                    <a href="anuncios.html">Anuncios</a>
-                    <a href="blog.html">Blog</a>
-                    <a href="contacto.html">Contacto</a>
-                </nav>
-            </div> <!--.barra-->>
+                <!--Menú hamburguesa-->
+                <div class="mobile-menu">
+                    <img src="build/img/barras.svg" alt="icono menu responsivo">
+                </div>
+
+                <!--Botón Dark mode-->
+                <div class="derecha">
+                    <img class="dark-mode-boton" src="build/img/dark-mode.svg" alt="boton dark mode">
+                    <nav class="navegacion">
+                        <a href="nosotros.html">Nosotros</a>
+                        <a href="anuncios.html">Anuncios</a>
+                        <a href="blog.html">Blog</a>
+                        <a href="contacto.html">Contacto</a>
+                    </nav>
+                </div>
+
+            </div> <!--.barra-->
 
         </div>
     </header>
@@ -76,12 +86,14 @@
 
     <footer class="footer seccion">
         <div class="contenedor contenedor-footer">
+
             <nav class="navegacion">
                 <a href="nosotros.html">Nosotros</a>
                 <a href="anuncios.html">Anuncios</a>
                 <a href="blog.html">Blog</a>
                 <a href="contacto.html">Contacto</a>
             </nav>
+            
         </div>
         <p class="copyright">Todos los derechos Reservados 2025 &copy;</p>
     </footer>
